# we-backend

./: pyproject.toml
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_category_post.py  0002_remove_category_kind.py  0003_category_author.py
comment/: admin.py  models.py  serializers.py
comment/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
config/: authentication.py  settings.py  urls.py
direct_messages/: models.py
direct_messages/migrations/: 0001_initial.py  0002_initial.py
like_dislike/: apps.py
medias/: models.py  views.py
medias/migrations/: 0001_initial.py  0002_initial.py
posts/: admin.py  models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_initial.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_is_host_alter_user_email.py
