[tool.poetry]
name = "we-backend"
version = "0.1.0"
description = "For Backend"
authors = ["woo-sang-jeong <jeongwoosangdev@gmail.com>"]
readme = "README.md"
packages = [{include = "we_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
black = "^23.1.0"
djangorestframework = "^3.14.0"
django-environ = "^0.9.0"
djangorestframework-simplejwt = "^5.2.2"
django-cors-headers = "^3.13.0"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
